--- a/rentcab/templates/403.html
+++ b/rentcab/templates/403.html
@@ -12,7 +12,7 @@
                 {% if '/inquilinos/cab/' in request.path and 'reservar' in request.path %}
                 <div class="row">
                     <button class="btn btn-outline-primary btn-sm px-5"
-                            onclick="location.href='{% url 'inquilinos:crear-huesped' %}'"
+                            onclick="location.href='{% url 'inquilinos:huesped-registro' %}'"
                             type="button">
                         Completar datos personales.
                     </button>
