Modificacion de boton Whatsapp: nueva pestana

--- a/rentcab/inquilinos/templates/inquilinos/index.html
+++ b/rentcab/inquilinos/templates/inquilinos/index.html
@@ -18,12 +18,13 @@
     </div>
     <div class="col-md-4 mt-5">
       <div class="card shadown-sm p-3 align-middle">
-        <button
-          class="btn btn-success"
-          onclick="location.href='https://api.whatsapp.com/send?phone=543534237553&text='"
+        <a
+          class="btn btn-success" type="" 
+          target="_blank"
+          href="https://api.whatsapp.com/send?phone=543534237553&text="
         >
           {% bs_icon 'whatsapp' size='1em'%} Contacto
-        </button>
+        </a>
         <p class="mt-2 mb-1 text-center">Horario de consulta:</p>
         <ul class="list-group">
           <li class="text-center list-group-item">
